# staliaswarden-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: config.js  index.js  main.rs  stalwart.js
